--- a/src/index.css
+++ b/src/index.css
@@ -28,11 +28,17 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background: #0098ca;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 1.5em;
+  margin: 0px;
+}
+
+h2 {
+  font-size: 1em;
+  margin: 0px;
 }
 
 button {
